fix minor issues on mobile view

--- a/portfolio/src/styles/contact.sass
+++ b/portfolio/src/styles/contact.sass
@@ -40,6 +40,8 @@
         button
             height: 30px 
             cursor: pointer
+            background: white
+
     .btn
         width: 100%
         .btn-top 
